Refactor: tree methods for clarity and consistency
Renamed methods and variables across RBTree, BinaryTree, and AVLTree to improve readability and ensure consistent naming conventions. Updated method calls such as `getParent` to `getParentOf` and `getBalance` to `getBalanceFactor`. Refactored queue operations in BinaryTree for efficiency and added explanatory comments in RBTree for rotation cases.